--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
-        <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
         
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
@@ -57,6 +56,50 @@
                            <img src="img/nat-2-large.jpg" alt="photo_2" class="composition__photo composition__photo--p2">
                            <img src="img/nat-3-large.jpg" alt="photo-3" class="composition__photo composition__photo--p3">
                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-features">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon fas fa-globe"></i>
+                            <h3 class="heading-tertiary  u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit, taque Explicabo itaque ex sequi! Vitae, atque aliquam. Incidunt autem voluptas quisquam veniam eum fuga itaque eveniet deserunt.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon far fa-compass"></i>
+                            <h3 class="heading-tertiary  u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit, taque Explicabo itaque ex sequi! Vitae, atque aliquam. Incidunt autem voluptas quisquam veniam eum fuga itaque eveniet deserunt.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon far fa-map"></i>
+                            <h3 class="heading-tertiary  u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit, taque Explicabo itaque ex sequi! Vitae, atque aliquam. Incidunt autem voluptas quisquam veniam eum fuga itaque eveniet deserunt.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon far fa-heart"></i>
+                            <h3 class="heading-tertiary  u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit, taque Explicabo itaque ex sequi! Vitae, atque aliquam. Incidunt autem voluptas quisquam veniam eum fuga itaque eveniet deserunt.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
