--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="col-1-of-4">
                         <div class="feature-box">
                             <i class="feature-box__icon far fa-compass"></i>
-                            <h3 class="heading-tertiary  u-margin-bottom-small">Explore the world</h3>
+                            <h3 class="heading-tertiary  u-margin-bottom-small">Meet nature</h3>
                             <p class="feature-box__text">
                                 Lorem ipsum dolor sit, taque Explicabo itaque ex sequi! Vitae, atque aliquam. Incidunt autem voluptas quisquam veniam eum fuga itaque eveniet deserunt.
                             </p>
@@ -85,7 +85,7 @@
                     <div class="col-1-of-4">
                         <div class="feature-box">
                             <i class="feature-box__icon far fa-map"></i>
-                            <h3 class="heading-tertiary  u-margin-bottom-small">Explore the world</h3>
+                            <h3 class="heading-tertiary  u-margin-bottom-small">Live a healthier life</h3>
                             <p class="feature-box__text">
                                 Lorem ipsum dolor sit, taque Explicabo itaque ex sequi! Vitae, atque aliquam. Incidunt autem voluptas quisquam veniam eum fuga itaque eveniet deserunt.
                             </p>
@@ -102,6 +102,38 @@
                         </div>
                     </div>
                 </div>
+            </section>
+
+            <section class="section-tours">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">Most Popular tours.</h2>
+                </div>
+                    <div class="row">
+                        <div class="col-1-of-3">
+                            <div class="card">
+                                <div class="card__side card__side--front card__side--front-1">
+                                    <div class="card__picture card__picture--1">
+                                        &nbsp;
+                                    </div>
+                                    <h4 class="card__heading">
+                                        The sea explorer
+                                    </h4>
+                                    <div class="card__text">
+
+                                    </div>
+                                </div>
+                                <div class="card__side card__side--back card__side--back-1">
+                                    Back
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-1-of-3">
+                            Column 1 of 3
+                        </div>
+                        <div class="col-1-of-3">
+                            Column 1 of 3
+                        </div> 
+                    </div>
             </section>
         </main>
     <!-- <section class="grid-test">
