--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="navigation">
-            <input type="checkbox" class="navigtion__checkbox" style="display: none;" id="navi-toggle">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
             <!-- On clicking label, id mentioned in "for" is activated. Therefore, marked a button. -->
             <label for="navi-toggle" class="navigation__button">MENU</label>
             <div class="navigation__background">&nbsp;</div>
